# bw_simapro_csv

./: .pre-commit-config.yaml  CHANGES.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package-deploy.yml  python-test.yml
bw_simapro_csv/: __init__.py  brightway.py  cas.py  constants.py  csv_reader.py  errors.py  header.py  main.py  parameters.py  uncertainty.py  units.py  utils.py
bw_simapro_csv/blocks/: __init__.py  base.py  calculated_parameters.py  damage_category.py  database_calculated_parameters.py  generic_biosphere.py  impact_category.py  literature_reference.py  method.py  normalization_weighting_set.py  parameters.py  process.py  products.py  quantities.py  system_description.py  technosphere_edges.py  units.py  wastes.py
docs/: conf.py  index.md  requirements.txt
tests/: __init__.py  conftest.py  test_csv_reader.py  test_header.py  test_parameters.py  test_process.py  test_units.py  test_utils.py
tests/blocks/: test_block_titles_semicolons.py  test_calculated_parameters.py  test_damage_category.py  test_database_calculated_parameters.py  test_database_input_parameters.py  test_impact_category.py  test_literature_reference.py  test_method.py  test_normalization_weighting_set.py  test_process_metadata.py  test_project_input_parameters.py  test_quantities.py  test_units.py  test_waste.py
tests/fixtures/: LICENSES  allocation.csv  cas_missing_check_number.csv  damagecategory.txt  external_documents_and_literature_references.csv  header.csv  header_translations.csv  invalid.txt  inventory.csv  literature.csv  method.csv  method_end.csv  minimal_header.csv  missing-project.csv  missing.txt  multioutput.txt  process.csv  process_identifiers.csv  project_params.csv  simple.txt  stages.csv  waste.csv  waste_scenario.csv  weird_units.csv
tests/integration/: test_brightway_export_allocation.py  test_brightway_process_identifiers.py  test_brightway_product_creation.py  test_premature_parsing_termination.py  test_process_csv.py
tests/unit/: test_brightway_utils.py  test_cas.py  test_uncertainty.py
