[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bw_simapro_csv"
authors = [
  { name="bw_simapro_csv", email="cmutel@gmail.com" }
]
maintainers = [
  { name="bw_simapro_csv", email="cmutel@gmail.com" }
]
description = "Utility library to read and parse SimaPro CSV LCI and LCIA files"
readme = "README.md"
dynamic = ["version"]
# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]
requires-python = ">=3.9"
dependencies = [
    "bw2parameters",
    "multifunctional>=0.4.3",
    "ftfy",
    "loguru",
    "platformdirs",
    "pydantic",
    "python-dateutil",
    "stats_arrays",
]

[project.urls]
source = "https://github.com/brightway-lca/bw_simapro_csv"
homepage = "https://github.com/brightway-lca/bw_simapro_csv"
tracker = "https://github.com/brightway-lca/bw_simapro_csv/issues"

[project.optional-dependencies]
# Getting recursive dependencies to work is a pain, this
# seems to work, at least for now
brightway = [
    "bw2data>=4.0.dev42",
    "bw2io>=0.9.dev27",
]
testing = [
    "bw_simapro_csv",
    "pytest",
    "pytest-cov",
    "pytest-randomly",
    "python-coveralls"
]
dev = [
    "build",
    "pre-commit",
    "black",
    "isort",
    "pylint",
    "pytest",
    "pytest-cov",
    "pytest-randomly",
    "setuptools",
]

[tool.setuptools]
license-files = ["LICENSE"]
include-package-data = true
packages = ["bw_simapro_csv", "bw_simapro_csv.blocks"]

[tool.setuptools.dynamic]
version = {attr = "bw_simapro_csv.__version__"}

[tool.pytest.ini_options]
addopts = "--cov bw_simapro_csv --cov-report term-missing --verbose"
norecursedirs = [
    "dist",
    "build",
    ".tox"
]
testpaths = ["tests/*.py", "tests/blocks/*.py", "tests/integration/*.py"]

[tool.flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 100
extend_ignore = ["E203", "W503"]
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude = [
    ".tox",
    "build",
    "dist",
    ".eggs",
    "docs/conf.py",
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 100
disable = "C0114, C0115, R1732, R0903, C0116, C0103, R0912"
